# apple-health-dashboard

./: .gitignore  AGENTS.md  README.md  SETUP.md  SKILL.md  app.py  main.py  parse_export.py  pyproject.toml  run.sh  setup.sh
backend/: aggregations.py  constants.py  data_loader.py  server.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ChartCard.tsx  DateRangeSlider.tsx  KpiCards.tsx  Plot.tsx  PlotlyChart.tsx  ProfileModal.tsx  WorkoutPanel.tsx
frontend/src/hooks/: useHealthData.ts
frontend/src/theme/: colors.ts  styles.css
scripts/: parse_export.py  run.sh  setup.sh
tests/: test_color_map.py  test_data_loader.py
